Code Improvements